--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/Caeldeth/staffmatrix#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
+    "clear": "^0.1.0",
     "console.table": "^0.10.0",
     "express": "^4.17.1",
     "inquirer": "^8.2.0",
